Final fine tunings
