# src/main/java/com/jayaprabahar/favouritezoo/controller/FavouriteController.java
@@ -1,17 +1,19 @@
-/**
- * 
- */
 package com.jayaprabahar.favouritezoo.controller;
 
-import com.jayaprabahar.favouritezoo.dto.GenericResponseDto;
-import com.jayaprabahar.favouritezoo.model.Favourite;
-import com.jayaprabahar.favouritezoo.service.FavouriteService;
-import org.springframework.beans.factory.annotation.Autowired;
+import java.util.List;
+
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.bind.annotation.RestController;
 
-import java.util.List;
+import com.jayaprabahar.favouritezoo.model.Favourite;
+import com.jayaprabahar.favouritezoo.service.FavouriteService;
 
 /**
  * <p> Project : favouritezoo </p>
@@ -28,12 +30,11 @@ import java.util.List;
 @RequestMapping("/favourite")
 public class FavouriteController {
 
-	private FavouriteService favouriteService;
+	private final FavouriteService favouriteService;
 
 	/**
 	 * 
 	 */
-	@Autowired
 	public FavouriteController(FavouriteService favouriteService) {
 		this.favouriteService = favouriteService;
 	}
@@ -41,8 +42,8 @@ public class FavouriteController {
 	/**
 	 * Returns the Assigned favourite Room For the Animal.
 	 * 
-	 * @param roomId
-	 * @param animalId
+	 * @param roomId Long
+	 * @param animalId Long
 	 * @return Favourite - assigned Favourite combination
 	 */
 	@GetMapping("/rooms/{roomId}/animals/{animalId}")
@@ -54,8 +55,8 @@ public class FavouriteController {
 	/**
 	 * Assigns a favourite room for animal
 	 * 
-	 * @param roomId
-	 * @param animalId
+	 * @param roomId Long
+	 * @param animalId Long
 	 * @return Favourite - assigned Favourite combination
 	 */
 	@PostMapping("/rooms/{roomId}/animals/{animalId}")
@@ -66,26 +67,25 @@ public class FavouriteController {
 	}
 
 	/**
-	 * Unassigns the favourite room for animal
+	 * Unassign the favourite room for animal
 	 * 
-	 * @param roomId
-	 * @param animalId
+	 * @param roomId long Room Id
+	 * @param animalId long animal Id
 	 * @return ResponseEntity<GenericResponseDto>
 	 */
 	@DeleteMapping("/rooms/{roomId}/animals/{animalId}")
 	@ResponseStatus(HttpStatus.NO_CONTENT)
-	public ResponseEntity<GenericResponseDto> unAssignFavouriteRoomForAnimal(
+	public ResponseEntity<String> unAssignFavouriteRoomForAnimal(
 			@PathVariable(name = "roomId") final Long roomId, @PathVariable(name = "animalId") final Long animalId) {
 		favouriteService.deleteFavourite(roomId, animalId);
-		return new ResponseEntity<>(GenericResponseDto.builder()
-				.message(String.format("Favourite room is unassigned for room %d and animal %d", roomId, animalId))
-				.status(200).build(), HttpStatus.OK);
+		return new ResponseEntity<>(String.format("Favourite room is unassigned for room %d and animal %d", roomId, animalId),
+				HttpStatus.NO_CONTENT);
 	}
 
 	/**
 	 * Lists all FavoriteRooms
 	 * 
-	 * @param animalId
+	 * @param animalId Long Animal Id
 	 * @return List<String>
 	 */
 	@GetMapping("/animals/{animalId}")
