# src/main/java/com/jayaprabahar/favouritezoo/errorhandling/ApiControllerAdvice.java
@@ -1,6 +1,3 @@
-/**
- * 
- */
 package com.jayaprabahar.favouritezoo.errorhandling;
 
 import java.util.stream.Collectors;
@@ -13,8 +10,6 @@ import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
-
-import com.jayaprabahar.favouritezoo.dto.GenericResponseDto;
 
 /**
  * <p> Project : favouritezoo </p>
@@ -31,32 +26,42 @@ import com.jayaprabahar.favouritezoo.dto.GenericResponseDto;
 public class ApiControllerAdvice {
 
 	/**
-	 * Handles all the validation violations and converts to easy readable errors with comma separated
+	 * Handles all the validation violations and converts to easily readable errors with comma separated
 	 * 
-	 * @param e
-	 * @return
+	 * @param e MethodArgumentNotValidException
+	 * @return ResponseEntity<String>  String ResponseEntity
 	 */
 	@ExceptionHandler(MethodArgumentNotValidException.class)
 	@ResponseStatus(HttpStatus.BAD_REQUEST)
-	public ResponseEntity<GenericResponseDto> handleMethodArgumentNotValidException(MethodArgumentNotValidException e) {
+	public ResponseEntity<String> handleMethodArgumentNotValidException(MethodArgumentNotValidException e) {
 		return new ResponseEntity<>(
-				GenericResponseDto.builder().error(e.getBindingResult().getAllErrors().stream().map(DefaultMessageSourceResolvable::getDefaultMessage).collect(Collectors.joining(", "))).build(),
+				e.getBindingResult().getAllErrors().stream().map(DefaultMessageSourceResolvable::getDefaultMessage).collect(Collectors.joining(", ")),
 				HttpStatus.BAD_REQUEST);
 	}
 
 	/**
 	 * Handles all unique constraint violations
 	 * 
-	 * @param e
-	 * @return
+	 * @param e ConstraintViolationException
+	 * @return ResponseEntity<String> String ResponseEntity
 	 */
 	@ExceptionHandler(ConstraintViolationException.class)
 	@ResponseStatus(HttpStatus.BAD_REQUEST)
-	public ResponseEntity<GenericResponseDto> handleConstraintViolationException(ConstraintViolationException e) {
+	public ResponseEntity<String> handleConstraintViolationException(ConstraintViolationException e) {
 		if(e.getCause().getMessage().contains("Unique index or primary key violation")) {
-			return new ResponseEntity<>(GenericResponseDto.builder().message("Information already exist").build(), HttpStatus.BAD_REQUEST);
+			return new ResponseEntity<>("Information already exist", HttpStatus.BAD_REQUEST);
 		}
-		return new ResponseEntity<>(GenericResponseDto.builder().error(e.getLocalizedMessage()).build(), HttpStatus.BAD_REQUEST);
+		return new ResponseEntity<>(e.getLocalizedMessage(), HttpStatus.BAD_REQUEST);
 	}
-	
+
+	/**
+	 * Handles all other exception
+	 *
+	 * @param e Exception
+	 * @return ResponseEntity<String> String ResponseEntity
+	 */
+	@ExceptionHandler(Exception.class)
+	public ResponseEntity<String> handleException(Exception e) {
+		return new ResponseEntity<>(e.getMessage(), HttpStatus.BAD_REQUEST);
+	}
 }
